manager: activate production-readiness — add GO-SIGNAL, update status dashboard, append backlog tasks, add 2025-10-01 manager note

--- a/coordination/inbox/quality/2025-10-01-notes.md
+++ b/coordination/inbox/quality/2025-10-01-notes.md
@@ -36,3 +36,15 @@ Running 3 tests using 3 workers
 [1A[2K[2/3] [webkit] › e2e/smoke.spec.ts:8:7 › dashboard smoke flow › loads overview dashboard root
 [1A[2K[3/3] [mobile-chrome] › e2e/smoke.spec.ts:8:7 › dashboard smoke flow › loads overview dashboard root
 [1A[2K  3 skipped
+
+[1] What micron filter should I run for EFI?
+
+[2] Return vs returnless—what should I use on a swap?
+
+[3] What setup do I need for the Tru-Cool MAX 40K LPD4739 cooler?
+
+[4] How do I install the Vapor Trapper vent charcoal canister to stop fuel smell?
+
+[5] What fittings and filters do I need with the Walbro GSL392 255 LPH inline pump?
+
+All goldens passed.
