--- a/coordination/inbox/tooling/2025-10-01-notes.md
+++ b/coordination/inbox/tooling/2025-10-01-notes.md
@@ -63,3 +63,8 @@ Risks/notes
   - Root Vitest: PASS (4 files, 12 tests). Dashboard Vitest: PASS (4 files, 12 tests).
 - Next
   - Prepare PR with dashboard TS/lint improvements; continue warning reductions opportunistically without behavior changes.
+
+08:11 UTC — PR opened
+- URL: https://github.com/Jgorzitza/hotrodan-assist/pull/5
+- Scope: Dashboard TS/lint cleanup with tests green.
+- CI: Expect Node 20 typecheck, vitest, and Playwright smoke to run per workflow.
