manager: enforce Continuous Work Protocol — proof-of-work every 5m, fallback on block; update GO-SIGNAL and agent instructions

--- a/coordination/inbox/manager/2025-10-01-notes.md
+++ b/coordination/inbox/manager/2025-10-01-notes.md
@@ -12,6 +12,8 @@ Cadence:
 - Validate CI green and health endpoints once Tooling pushes
 
 Blockers to watch:
+
+08:33 UTC — Policy reinforcement: Added Continuous Work Protocol. Agents must append proof-of-work every 5 minutes or log blocker + start fallback. GO-SIGNAL updated with compliance enforcement.
 - Credentials (GA4/GSC/Bing) — keep features gated and degrade to mocks
 - Shopify tunnel config stability for dashboard dev
 
@@ -20,3 +22,8 @@ Blockers to watch:
 08:11 UTC — Sweep executed. GO-SIGNAL timestamp updated. Quality suite run triggered. No new blockers recorded.
 08:23 UTC — Sweep executed. GO-SIGNAL timestamp updated. Quality suite run triggered. No new blockers recorded.
 08:10 UTC — Note: Dashboard test env missing dev deps (@shopify/polaris, @shopify/app-bridge-react, @faker-js/faker, bullmq, jsdom) and @prisma/client load under vitest fixtures; proceeding without installs per guardrails. Guidance requested on allowing a devDependencies install or adjusting test config to skip UI libs in server-only tests.
+08:30 UTC — Decision request: Approve one of the following for test lane:
+- A) Install required devDependencies (Polaris, App Bridge, jsdom, faker, bullmq) for CI test env
+- B) Add Vite/vitest aliases to mock @shopify/polaris and @shopify/app-bridge-react to minimal shims; add jsdom as test environment
+- C) Mark UI-heavy suites as skipped in CI and run server-only subsets green
+Rationale: Server-side subsets are green; UI deps block full-run. Proceeding with server-side subsets until guidance.
