ci: add Agent Proof Monitor (scheduled) and enhance monitor to flag no proof-of-work in 10m; update GO-SIGNAL

--- a/coordination/inbox/quality/2025-10-01-notes.md
+++ b/coordination/inbox/quality/2025-10-01-notes.md
@@ -610,3 +610,71 @@ All goldens passed.
 
 **Status**: Proceeding immediately with Dockerfile fix.
 
+
+## [08:32 UTC] Dockerfile Fix — SUCCESSFUL ✅
+
+### Changes Made
+1. ✅ Removed duplicate multi-stage builds (Alpine + Bullseye)
+2. ✅ Fixed Prisma generation (removed `|| true`, fail fast)
+3. ✅ Standardized port to 8080 (consistent)
+4. ✅ Separated prod-deps stage (prunes dev dependencies)
+5. ✅ Added inline comments for clarity
+
+### Docker Build Test
+**Command**: `docker build --target runtime -f Dockerfile -t dashboard-fixed-test .`
+**Result**: ✅ **SUCCESS**
+
+**Build metrics**:
+- Total build time: 35.6s + 59.0s export = 94.6s
+- Client build: 21.71s
+- SSR build: 10.16s
+- Image built successfully
+- Tagged: dashboard-fixed-test:latest
+
+**Warnings**:
+- shopify.server.ts dynamic + static import warning (known, non-critical)
+
+### Validation
+✅ No duplicate stage errors
+✅ No undefined ARG errors
+✅ Prisma generation succeeded
+✅ Build completed without errors
+✅ Image exported successfully
+
+**Status**: Dockerfile blocker RESOLVED.
+
+
+## [08:34 UTC] CI/CD Workflow Fix — COMPLETE ✅
+
+### Changes Made
+1. ✅ Merged duplicate CI workflow definitions into single workflow
+2. ✅ Removed silent Prisma failures (`|| true`)
+3. ✅ Added Docker build validation job
+4. ✅ Added Python pip caching
+5. ✅ Improved job names for clarity
+6. ✅ Separated concerns into 4 jobs
+
+### New CI Pipeline Structure
+
+**4 Jobs** (run in parallel):
+1. **backend-tests** — Chroma smoke tests (Python goldens)
+2. **dashboard-tests** — Lint, vitest, playwright
+3. **dashboard-build** — Prisma generation + build (fail fast)
+4. **docker-build** — Docker build validation with caching
+
+### Key Improvements
+- ✅ No duplicate workflow names
+- ✅ Prisma generation fails fast (catches errors)
+- ✅ Docker builds validated on every push (would have caught Dockerfile blocker)
+- ✅ GitHub Actions cache for Python and npm
+- ✅ Docker layer caching via GitHub Actions cache
+
+### Validation
+✅ YAML syntax valid
+✅ No duplicate job names
+✅ All required actions specified
+✅ Proper working-directory for dashboard jobs
+✅ Docker Buildx setup for multi-platform support
+
+**Status**: CI/CD blocker RESOLVED.
+
