chore(inventory): targeted vitest + health curl evidence; tests PASS, curl 000 (dev server offline)
- Run vitest (api.inventory.health, api.inventory.csv-export.loader, app.inventory)
- Log curl pre/post 000 with command + fallback
- Note perf harness plan for 1k+ SKUs in feedback

Refs: dashboard.inventory, tooling

--- a/coordination/inbox/inventory/2025-10-03-notes.md
+++ b/coordination/inbox/inventory/2025-10-03-notes.md
@@ -24,3 +24,13 @@ Action: Re-run curl when dev server is available; proceed with perf harness plan
 - Live Shopify wiring readiness: BLOCKED (credentials + dev server/tunnel)
 
 Next action: retry curl when server is online; keep mock-mode tests green and continue perf harness documentation.
+
+---
+Inventory vitest + curl evidence (additional run)
+- Commands executed:
+  - `npx vitest run --root dashboard --config vitest.config.ts app/routes/__tests__/api.inventory.health.test.ts app/routes/__tests__/api.inventory.csv-export.loader.test.ts app/routes/__tests__/app.inventory.test.ts`
+  - `curl -sS -o /dev/null -w '%{http_code}\n' http://127.0.0.1:8080/api/inventory/health`
+- Results:
+  - Vitest: PASS (3 files, 9 tests)
+  - Health curl (pre/post): HTTP 000 (dev server offline)
+- Status: Live Shopify wiring = BLOCKED until dev server/tunnel + credentials are available. Will re-run curl upon availability.
